fixed bug for 180 not visible

--- a/front-end/src/app/gameroom/rook-card/rook-card.component.css
+++ b/front-end/src/app/gameroom/rook-card/rook-card.component.css
@@ -8,8 +8,8 @@
 }
 
 .face {
-    transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180.1deg);
+    -webkit-transform: rotateY(180.1deg);
 }
 
 .card {
@@ -29,6 +29,7 @@
     box-shadow: 2px 2px 2px 1px rgba(232, 232, 232, 0.2);
     transition: 0.2s;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .faces {
@@ -38,19 +39,19 @@
     left: 0;
     right: 0;
     bottom: 0;
-    backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .front {
     transform: rotateY(180deg);
-    backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .back-card {
-    backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     position: absolute;
     top: 1rem;
     bottom: 1rem;
